--- a/.env.local
+++ b/.env.local
@@ -1,11 +1,12 @@
 # just a flag
-ENV = 'local'
+ENV = '7dgame.com'
 
 
 # base api
-VUE_APP_BASE_API = 'http://[ip]:81'
+VUE_APP_BASE_API = 'https://api.7dgame.com'
 # base web
-VUE_APP_BASE_URL = 'http://[ip]:82'
+VUE_APP_BASE_URL = 'https://7dgame.com'
 
-VUE_APP_BASE_MODE = 'local'
+VUE_APP_BASE_MODE = '7dgame.com'
+
 VUE_APP_DOC_API = 'https://hololens2.cn/wp-json/wp/v2/'
